tests/fsharp/typecheck/sigs/neg_byref_16.bsl

neg_byref_16.fs(3,5,3,6): typecheck error FS3301: The function or method has an invalid return type '('a -> bool -> byref<int> * 'a)'. This is not permitted by the rules of Common IL.

neg_byref_16.fs(3,33,3,42): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_16.fs(3,40,3,41): typecheck error FS0421: The address of the variable 'a' cannot be used at this point
